--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     implementation 'androidx.room:room-ktx:2.4.3'
     kapt 'androidx.room:room-compiler:2.4.3'
 
+    implementation 'com.google.code.gson:gson:2.10.1'
     // LiveData
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
 
